# BackMask

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  satan_1grams.txt  satan_2grams.txt
_build/: cmake_install.cmake
inc/: BitOperations.h  GlobalWorker.h  StringViewMaskTrie.h  ThreadWorker.h
src/: GlobalWorker.cpp  StringViewMaskTrie.cpp  ThreadWorker.cpp  main.cpp
